microk8s/setup/postgres/postgresql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-network-policy
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app: postgres-cluster # PostgreSQLクラスタのPodに適用されるラベル
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.3.0/24 # 許可するIP範囲
      ports:
        - protocol: TCP
          port: 5432 # PostgreSQLのデフォルトポート
